# kor-trading

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.claude/agents/: indicator-analyst.md  issue-analyst.md  k-stock-agent.md  orchestrator.md  reporter.md  stock-selector.md
.claude/skills/_shared/: ktrade.py
.claude/skills/k-analyze/: SKILL.md
.claude/skills/k-analyze/scripts/: run.py
.claude/skills/k-backtest/: SKILL.md
.claude/skills/k-backtest/scripts/: run.py
.claude/skills/k-disclosures/: SKILL.md
.claude/skills/k-disclosures/scripts/: run.py
.claude/skills/k-flow/: SKILL.md
.claude/skills/k-flow/scripts/: run.py
.claude/skills/k-journal/: SKILL.md
.claude/skills/k-journal/scripts/: run.py
.claude/skills/k-manage/: SKILL.md
.claude/skills/k-manage/scripts/: run.py
.claude/skills/k-market/: SKILL.md
.claude/skills/k-market/scripts/: run.py
.claude/skills/k-movers/: SKILL.md
.claude/skills/k-movers/scripts/: run.py
.claude/skills/k-paper/: SKILL.md
.claude/skills/k-paper/scripts/: run.py
.claude/skills/k-rank/: SKILL.md
.claude/skills/k-rank/scripts/: run.py
.claude/skills/k-screen/: SKILL.md
.claude/skills/k-screen/scripts/: run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
config/: default.yaml
docs/: CONFIG.md  DEVELOPMENT.md  INDICATORS.md  PRD.md  ROADMAP.md
scripts/: com.kortrading.daily.plist
src/kor_trading/: __init__.py  __main__.py
src/kor_trading/adapters/inbound/: cli.py
src/kor_trading/adapters/outbound/: claude_code_classifier.py  dart_corp_code_resolver.py  dart_disclosure.py  fdr_ohlcv.py  fdr_ticker_name_resolver.py  filesystem_report_repository.py  kis_client.py  kis_investor_flow.py  kis_volume_rank.py  krx_openapi_client.py  krx_openapi_market_snapshot.py  pykrx_investor_flow.py  pykrx_market_snapshot.py  pykrx_ohlcv.py  telegram_notifier.py
src/kor_trading/application/dto/: indicator_analysis.py  issue_analysis.py  selection.py
src/kor_trading/application/rendering/: report_renderer.py
src/kor_trading/application/use_cases/: analyze_indicators.py  analyze_issues.py  generate_report.py  run_pipeline.py  select_stocks.py
src/kor_trading/domain/entities/: disclosure.py  indicator_snapshot.py  issue.py  ohlcv_bar.py  stock_snapshot.py  ticker.py
src/kor_trading/domain/ports/: clock.py  corp_code_resolver.py  disclosure_provider.py  intraday_rank_provider.py  investor_flow_provider.py  market_snapshot_provider.py  notifier.py  ohlcv_provider.py  report_repository.py  sentiment_classifier.py  ticker_name_resolver.py
src/kor_trading/domain/services/: backtest.py  disclosure_filter.py  horizon_recommendation.py  indicator_calculator.py  indicator_explainer.py  indicator_scorer.py  issue_factory.py  issue_scoring.py  position_advisor.py  recency_decay.py  risk_levels.py  setup_classifier.py
src/kor_trading/domain/values/: market_overview.py  recommendation.py  score.py  trade_plan.py
src/kor_trading/infrastructure/: clock.py  config.py  container.py  krx_auth.py  logging.py
tests/: conftest.py  test_smoke.py
tests/fakes/: fake_disclosure_provider.py  fake_investor_flow_provider.py  fake_market_snapshot_provider.py  fake_ohlcv_provider.py  fake_sentiment_classifier.py  fixed_clock.py
tests/integration/adapters/: test_pykrx_market_snapshot_live.py
tests/unit/adapters/inbound/: test_cli.py
tests/unit/adapters/outbound/: test_claude_code_classifier.py  test_dart_corp_code_resolver.py  test_dart_disclosure.py  test_fdr_ohlcv.py  test_fdr_ticker_name_resolver.py  test_filesystem_report_repository.py  test_kis_investor_flow.py  test_kis_volume_rank.py  test_krx_openapi_market_snapshot.py  test_pykrx_investor_flow.py  test_pykrx_market_snapshot.py  test_pykrx_ohlcv.py  test_telegram_notifier.py
tests/unit/application/dto/: test_selection.py
tests/unit/application/rendering/: test_report_renderer.py
tests/unit/application/use_cases/: test_analyze_indicators.py  test_analyze_issues.py  test_generate_report.py  test_run_pipeline.py  test_select_stocks.py
tests/unit/domain/entities/: test_disclosure.py  test_indicator_snapshot.py  test_issue.py  test_ohlcv_bar.py  test_stock_snapshot.py  test_ticker.py
tests/unit/domain/ports/: test_disclosure_provider.py  test_notifier_and_repository.py  test_ohlcv_provider.py
tests/unit/domain/services/: test_backtest.py  test_disclosure_filter.py  test_horizon_recommendation.py  test_indicator_calculator.py  test_indicator_explainer.py  test_indicator_scorer.py  test_indicator_signal_classification.py  test_issue_factory.py  test_issue_scoring.py  test_position_advisor.py  test_recency_decay.py  test_risk_levels.py  test_setup_classifier.py
tests/unit/domain/values/: test_score.py  (+3 more)
tests/unit/infrastructure/: test_clock.py  test_config.py  test_container.py  test_krx_auth.py  test_logging.py
