[project]
name = "kor-trading"
version = "0.1.0"
description = "한국 주식 트레이딩 보조 멀티 에이전트 시스템"
requires-python = ">=3.11,<3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

# ──────────────────────── ruff ────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "TCH", "ARG", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "ARG"]

# ──────────────────────── mypy ────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["pykrx.*", "FinanceDataReader.*", "pandas_ta.*"]
ignore_missing_imports = true

# ──────────────────────── pytest ────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers --cov=src/kor_trading --cov-report=term-missing"
markers = [
    "integration: requires external services",
    "e2e: end-to-end pipeline tests",
]

# ──────────────────────── coverage ────────────────────────
[tool.coverage.run]
branch = true
source = ["src/kor_trading"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.\\s*$",
]
