[project]
name = "kor-trading"
version = "0.1.0"
description = "한국 주식 트레이딩 보조 멀티 에이전트 시스템"
requires-python = ">=3.11,<3.13"
dependencies = [
    "finance-datareader>=0.9.202",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "structlog>=25.5.0",
    "typer>=0.26.2",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
    "pre-commit>=3.7",
    "types-pyyaml>=6.0.12.20260518",
    "respx>=0.23.1",
    "import-linter>=2.11",
]

# ──────────────────────── ruff ────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "TCH", "ARG", "PL"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "ARG"]

# ──────────────────────── mypy ────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["pykrx.*", "FinanceDataReader.*", "pandas_ta.*", "pandas", "pandas.*"]
ignore_missing_imports = true

# ──────────────────────── pytest ────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers -m 'not integration and not e2e' --cov=src/kor_trading --cov-report=term-missing"
markers = [
    "integration: requires external services",
    "e2e: end-to-end pipeline tests",
]

# ──────────────────────── coverage ────────────────────────
[tool.coverage.run]
branch = true
source = ["src/kor_trading"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.\\s*$",
]

# ──────────────────────── import-linter ────────────────────────
[tool.importlinter]
root_package = "kor_trading"
include_external_packages = true

# 도메인 핵심(엔티티·값객체·포트)은 framework 0 의존
[[tool.importlinter.contracts]]
name = "Domain core(entities/values/ports)는 외부·상위 레이어 의존 금지"
type = "forbidden"
source_modules = [
    "kor_trading.domain.entities",
    "kor_trading.domain.values",
    "kor_trading.domain.ports",
]
forbidden_modules = [
    "kor_trading.application",
    "kor_trading.adapters",
    "kor_trading.infrastructure",
    "pandas",
    "pykrx",
    "httpx",
    "pydantic",
    "structlog",
    "FinanceDataReader",
]

# 도메인 서비스는 계산용 pandas만 예외 허용, 나머지 IO 라이브러리·상위 레이어 금지
[[tool.importlinter.contracts]]
name = "Domain services는 pandas 외 외부 IO·상위 레이어 의존 금지"
type = "forbidden"
source_modules = ["kor_trading.domain.services"]
forbidden_modules = [
    "kor_trading.application",
    "kor_trading.adapters",
    "kor_trading.infrastructure",
    "pykrx",
    "httpx",
    "pydantic",
    "structlog",
    "FinanceDataReader",
]

# Application은 어댑터·인프라·외부 IO 라이브러리 직접 의존 금지 (pandas는 domain.services 경유 허용)
[[tool.importlinter.contracts]]
name = "Application은 어댑터·인프라·외부 IO 의존 금지"
type = "forbidden"
source_modules = ["kor_trading.application"]
forbidden_modules = [
    "kor_trading.adapters",
    "kor_trading.infrastructure",
    "pykrx",
    "httpx",
    "FinanceDataReader",
]
